--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <center>
     <h1>Description of the Music Tool(Group Project).</h1>
+    <h2>UI/UX Designers(Aanu, Joy and Noel)</h2>
     <label for="Sign In">LOGIN</label>(
     <ul>
         <li>Users need it to connect to their Deezer Account.</li>
@@ -34,7 +35,7 @@
     </ul>
     <h4>NOTE!</h4>
     <p>It's not only your Deezer's Account, it can accept a restricted amount of  musical tools accounts to be used by the user.</p>
-    <h3>HOMEPAGE OF THE MUSIC TOOL</h3>
+    
     <ul>
     <ol>
         <li>Search or Play Songs depending on user's Mood via Voice Recognition created by the Software Engineer using Vanilla JavaScript,<p> HTML and CSS also Font Awesome Icon.</p></li>
@@ -44,18 +45,53 @@
         <li>See automatic Songs Suggested by the Music Tools specifically for me, gathered together from my prefered choice of Music/Songs.</li>
     </ol>
     </ul>
-    <h4>Mood</h4>
-    <label for="moods">Different Types Of Moods varyingg with different types ofcolors(SEE CSS)</label>
-    <ol class="color combination">
-        <li class="cheer">Cheerful</li>
-        <li class="funny">Humorous(Fun)</li>
-        <li class="romance">Romantic(Love)</li>
-        <li class="trust">Calm(Peace)</li>
-        <li class="fear">Fearful(Afraid)</li>
-        <li class="isolated">Lonely(Depression)</li>
+        <h3>HOMEPAGE OF THE MUSIC TOOL</h3>
+        <ol>
+            <li>Favorite Artist of the User with button directed to auto-generated tracks while another button will be provided to also delete already selected songs in a playlist.</li>
+            <li>Artist's Album(will be generated via the API key lated provided). </li>
+            <li>Various Artists via Carousel (Bootstrap) with necessary accolades through images and a compressed image.</li>
+            <li>User needs songs according to Genres(Pop, Country, R&B and Soul, Hip-pop,etc) will be provided with Deezer's API.</li>
+            <li>Top 10 most-listened songs by users coupled with Top 10 images of the Album Cover will be provided.</li>
+            <li>The name of Artist and Name of Songs will also be stated.</li>
+        </ol>
+            <h4>Genre</h4>
+        <ul>
+            <li>Top 4 frequently listened songs according to their Music Genres are stated in various percentages stated in the raw file of our Tool.</li>
+            <li>Generation of a new playlist with the plus(+) icon provided on a Page also leads to auto-generated songs. </li>
+        </ul>
+        <h4>MOOD</h4>
+        In sub-conclusion, Each Moods have their respective buttons which correlates with th Top 4 Moods illustrated below:
+    <ol>
+      <li>Feels</li>
+      <li>Gbedu</li>
+      <li>Moody</li>
+      <li>Chilley</li>
     </ol>
-
-
+    <p>Each button selected leads to auto-generated songs</p>
+    <h5>Moods</h5>
+    <label for="moods">Different Types Of Moods varying with different types of colors(SEE CSS)</label>
+    <ol class="color combination">
+        <li class="cheer">Feels(Cheerful)</li>
+        <li class="funny">Gbedu(Fun)</li>
+        <li class="romance">Moody(In between Feelings)</li>
+        <li class="trust">Chilled(Peace)</li>
+    </ol>
+   <h6>NOTE;</h6>
+   <ul>
+       <li>On every page, there'll be a Voice Recognition icon where when selected, a user will be able to utter a keyword(Genre), it pops-up the playlist spoken</li>
+       <li>The About Us button gives a detailed description about the platform(Astronaat), the Share Button allows users share via Social Media Platforms(Facebook, Instagram, Twitter, etc), with a link, while the profile button shows a drops-down a series of options including allowing a user toggle between light and dark mode.</li>
+   </ul>
+   <footer>References</footer>
+   <ol>
+       <li>Deezer(API).</li>
+       <li>Bootstrap(4.5 version) for responsibility.</li>
+       <li>JavaScript(Functionality).</li>
+       <li>Buttons(Icons) used inter-changeably.</li>
+       <li>Tracks(Songs) used in similarity.</li>
+       <li>Tool(it's not a complete App but a Platform(a user interface)).</li>
+       <li>HTML(background Codes) SWE.</li>
+       <li>CSS(External CSS linked in the HTML provided) for styling the Tool.</li>
+   </ol>
     </center>
   <script src="index.js"></script>
 </body>
