--- a/index.html
+++ b/index.html
@@ -3,96 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>API Documentation</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ASTROONAT MUSIC TOOL</title>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="CSS/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- <link href="https://use.fontawesome.com/releases/v5.15.3/css/svg-with-js.css" rel="stylesheet"></link> -->
+    <link rel="stylesheet" type="text/css" href="CSS/all.css">
 </head>
 <body>
-    <center>
-    <h1>Description of the Music Tool(Group Project).</h1>
-    <h2>UI/UX Designers(Aanu, Joy and Noel)</h2>
-    <label for="Sign In">LOGIN</label>(
-    <ul>
-        <li>Users need it to connect to their Deezer Account.</li>
-
-        <li>Users also need it to connect to their Email (Gmail or Yahoomail),
-        <p>then various Social Media Platforms (Facebook and so-on) and Iphone (Apple Account).</p>
-        </li>
-        <li>Enter correct and acceptable (don't guess too much) password to log into the user's Deezer Account.</li>
-    </ul>
-    <h4> NOTE!</h4>
-    <p>It's not only your Deezer's Account, it can accept a restricted amount of  musical tools accounts to be used by the user.</p>
-
-    <h2>SIGN UP</h2>
-    <ul>
-        <li>Users need it to connect to their Deezer Account.</li>
-
-        <li>Users also need it to connect to their Email (Gmail or Yahoomail),
-        <p>then various Social Media Platforms (Facebook and so-on) and Iphone (Apple Account).</p>
-        </li>
-        <li>Enter correct and acceptable (don't guess too much) password to log into the user's Deezer Account.</li>
-        <li>A link to your Dezzer Acount  will be provided.</li>
-    </ul>
-    <h4>NOTE!</h4>
-    <p>It's not only your Deezer's Account, it can accept a restricted amount of  musical tools accounts to be used by the user.</p>
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">MUSIC ICONS</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1">WIZKID</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2">DAVIDO</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="3">D'BANJI</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4">BURNA BOY</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5">OLAMIDE</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6">2BABA</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="7">TIWA SAVAGE</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="8">FALZ THE BAHD GUY</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="9">PATORANKING</li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="10">SIMI</li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="Images/music icons.jpg" class="d-block w-100" alt="music icons.jpg">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Wizkid.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Davido.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/D'banji.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Burna Boy.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Olamide.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/2Baba.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Tiwa Savage.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Falz The Bahd Guy.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Patoranking.jpg" class="d-block w-100" alt="">
+      </div>
+      <div class="carousel-item">
+        <img src="Images/Simi.jpg" class="d-block w-100" alt="">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Astroonat</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#HOMEPAGE">HOMEPAGE<span class="sr-only">(current)</span></a>
+              </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#https://www.yahoomail.com"><i class="fab fa-yahoo"></i> <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#https://www.gmail.com"><i class="fab fa-google"></i> <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#"><i class="fas fa-share-alt"></i> <span class="sr-only">(current)</span></a>
+              </li>
+              <a class="nav-link" href="#About Us">About Us</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" class="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#Profile">Profile</a>
+                <a class="dropdown-item" href="#UI/UX Designers">UI/UX Designers</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#Data Science">Data Science</a>
+                <a class="dropdown-item" href="#Software Web Engineers">Software Web Engineers</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" class="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                SOCIAL AND MUSIC ICONS
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#"><i class="fab fa-facebook"></i></a>
+                <a class="dropdown-item" href="#"><i class="fab fa-twitter"></i></a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#"><i class="fab fa-deezer"></i></a>
+              </div>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search for songs via artists, albums, playlists and favourites" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+      <div class="row">
+          <div class="col-sm-6">
+              <h3>Login</h3>
+              <p>Email</p>
+              <input type="email" placeholder="Enter Email"/>
+              <p>Password</p>
+              <input type="password" placeholder="Enter Password"/><br/>
+              <br/><div class="btn-group" role="group">
+                <button type="button" class="btn btn-danger">RESET</button>
+                <button type="button" class="btn btn-success">SUBMIT</button>
+             </div>  
+          </div>
+      </div>
     
-    <ul>
-    <ol>
-        <li>Search or Play Songs depending on user's Mood via Voice Recognition created by the Software Engineer using Vanilla JavaScript,<p> HTML and CSS also Font Awesome Icon.</p></li>
-        <li>Create Playlists from Songs and Artists based on User's Mood.</li>
-        <li>View my Recently Played Songs.</li>
-        <li>View Songs according Category and/or Genre.</li>
-        <li>See automatic Songs Suggested by the Music Tools specifically for me, gathered together from my prefered choice of Music/Songs.</li>
-    </ol>
-    </ul>
-        <h3>HOMEPAGE OF THE MUSIC TOOL</h3>
-        <ol>
-            <li>Favorite Artist of the User with button directed to auto-generated tracks while another button will be provided to also delete already selected songs in a playlist.</li>
-            <li>Artist's Album(will be generated via the API key lated provided). </li>
-            <li>Various Artists via Carousel (Bootstrap) with necessary accolades through images and a compressed image.</li>
-            <li>User needs songs according to Genres(Pop, Country, R&B and Soul, Hip-pop,etc) will be provided with Deezer's API.</li>
-            <li>Top 10 most-listened songs by users coupled with Top 10 images of the Album Cover will be provided.</li>
-            <li>The name of Artist and Name of Songs will also be stated.</li>
-        </ol>
-            <h4>Genre</h4>
-        <ul>
-            <li>Top 4 frequently listened songs according to their Music Genres are stated in various percentages stated in the raw file of our Tool.</li>
-            <li>Generation of a new playlist with the plus(+) icon provided on a Page also leads to auto-generated songs. </li>
-        </ul>
-        <h4>MOOD</h4>
-        In sub-conclusion, Each Moods have their respective buttons which correlates with th Top 4 Moods illustrated below:
-    <ol>
-      <li>Feels</li>
-      <li>Gbedu</li>
-      <li>Moody</li>
-      <li>Chilley</li>
-    </ol>
-    <p>Each button selected leads to auto-generated songs</p>
-    <h5>Moods</h5>
-    <label for="moods">Different Types Of Moods varying with different types of colors(SEE CSS)</label>
-    <ol class="color combination">
-        <li class="cheer">Feels(Cheerful)</li>
-        <li class="funny">Gbedu(Fun)</li>
-        <li class="romance">Moody(In between Feelings)</li>
-        <li class="trust">Chilled(Peace)</li>
-    </ol>
-   <h6>NOTE;</h6>
-   <ul>
-       <li>On every page, there'll be a Voice Recognition icon where when selected, a user will be able to utter a keyword(Genre), it pops-up the playlist spoken</li>
-       <li>The About Us button gives a detailed description about the platform(Astronaat), the Share Button allows users share via Social Media Platforms(Facebook, Instagram, Twitter, etc), with a link, while the profile button shows a drops-down a series of options including allowing a user toggle between light and dark mode.</li>
-   </ul>
-   <footer>References</footer>
-   <ol>
-       <li>Deezer(API).</li>
-       <li>Bootstrap(4.5 version) for responsibility.</li>
-       <li>JavaScript(Functionality).</li>
-       <li>Buttons(Icons) used inter-changeably.</li>
-       <li>Tracks(Songs) used in similarity.</li>
-       <li>Tool(it's not a complete App but a Platform(a user interface)).</li>
-       <li>HTML(background Codes) SWE.</li>
-       <li>CSS(External CSS linked in the HTML provided) for styling the Tool.</li>
-   </ol>
-    </center>
-  <script src="index.js"></script>
+
+
+
+
+
+
+
+    <script type="text/javascript" src="index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>  
+  
 </body>
 </html>
