--- a/index.html
+++ b/index.html
@@ -4,45 +4,134 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Description Of The API</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ASTRONAAT</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
-    <h1>Introduction</h1>
-    <p>Unlimited Access, without stress, without identification. Deezer Simple API provides a nice set of services to build up web applications allowing the discovery of Deezer's music catalogue.</p>
-    <label><strong>Requests</strong></label>
-    <p>You may use ordinary HTTP GET messages. The base URL for each API method looks like the following</p>
-    <nav>https://api.deezer.com/version/service/id/method/?parameters</nav>
-    <label><strong>Query quota</strong></label>
-    <p>The number of requests per second is limited to 50 requests / 5 seconds.</p>
-    <label><strong>Response format examples</strong></label>
-    <nav>https://api.deezer.com/user/2529</nav>
-    <nav>https://api.deezer.com/user/2529/playlists</nav>
-    <nav>https://api.deezer.com/album/302127</nav>
-    <label><strong> Response format</strong></label>
-    <p>In order to search the specified artist name 'eminem', and get xml back, you can do :</p>
-    <nav>GET /search/artist/?q=eminem&index=0&limit=2&output=xml</nav><br/>
-    <br/><p>The available formats are those following :</p>
-    <table style="width:100%; outline-style: groove;">
-        <tr class="table">
-          <th>DESCRIPTION</th>
-          <th>ACCEPT HEADER</th>
-          <th>EXTENSION</th>
-        </tr>
-        <tr>
-            <td>JSON</td>
-            <td>application/json</td>
-            <td>.json</td>
-        </tr>
-        <tr>
-            <td>JSONP</td>
-            <td>application/json</td>
-            <td>.json</td>
-        </tr>
-    </table><br/>
-    <label>ENCODING</label>
-    <p>All requests and responses must be in UTF-8.</p>
-    <p>More documentation available on :</p>
-    <nav>http://tools.ietf.org/html/rfc2279</nav>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+    <div class="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">MUSIC ICONS</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1">WIZKID</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2">DAVIDO</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3">D'BANJI</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4">BURNA BOY</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5">OLAMIDE</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6">2BABA</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="7">TIWA SAVAGE</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="8">FALZ THE BAHD GUY</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="9">PATORANKING</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="10">SIMI</li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Images/music icons.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Wizkid.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Davido.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/D'banji.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Burna Boy.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Olamide.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/2Baba.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Tiwa Savage.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Falz The Bahd Guy.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Patoranking.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Images/Simi.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class="col-sm-4"></div>
+    </div>
+    </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Astroonat</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home">HOMEPAGE<span class="sr-only">(current)</span></a>
+                  </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="#"><i class="fab fa-google"></i> <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><i class="fas fa-share-alt"></i> <span class="sr-only">(current)</span></a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    SOCIAL AND MUSIC ICONS
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#"><i class="fab fa-facebook"></i></a>
+                    <a class="dropdown-item" href="#"><i class="fab fa-twitter"></i></a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#"><i class="fab fa-deezer"></i></a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search for songs via artists, albums, playlists and favourites" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+          <div class="row">
+            <div class="col-sm-4"></div>
+              <div class="col-sm-4">
+                  <h3>Login</h3>
+                  <p>Email</p>
+                  <input type="email" placeholder="Enter Email"/>
+                  <p>Password</p>
+                  <input type="password" placeholder="Enter Password"/><br/>
+                  <br/><div class="btn-group" role="group">
+                    <button type="button" id="button" class="btn btn-danger">RESET</button>
+                    <button type="button" id="button" class="btn btn-success">SUBMIT</button>
+                 </div>  
+                 <div class="col-sm-4"></div>
+              </div>
+          </div>
+          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 </html>
