--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
+  <header><h1>ASTROOONAAT MUSIC TOOL</h1></header>
     <div class="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">MUSIC ICONS</li>
@@ -111,22 +112,11 @@
               </form>
             </div>
           </nav>
-          <div class="row">
-            <div class="col-sm-4"></div>
-              <div class="col-sm-4">
-                  <h3>Login</h3>
-                  <p>Email</p>
-                  <input type="email" placeholder="Enter Email"/>
-                  <p>Password</p>
-                  <input type="password" placeholder="Enter Password"/><br/>
-                  <br/><div class="btn-group" role="group">
-                    <button type="button" id="button" class="btn btn-danger">RESET</button>
-                    <button type="button" id="button" class="btn btn-success">SUBMIT</button>
-                 </div>  
+
+             
                  <div class="col-sm-4"></div>
               </div>
           </div>
-          <div class="row">
             <div class="col-sm-3">
               <h1>LOGIN PAGE</h1>
              <p>No. 1 Music Streaming Analysis Platform</p>
@@ -138,21 +128,35 @@
              </div>
             </div>  
             </div>
-          </div>
+            <div class="col-sm-4"></div>
+              <div class="col-sm-4">
+                  <h3>Login</h3>
+                  <p>Email</p>
+                  <input type="email" placeholder="Enter Email"/>
+                  <p>Password</p>
+                  <input type="password" placeholder="Enter Password"/><br/>
+                  <br/><div class="btn-group" role="group">
+                    <button type="button" class="button" class="btn btn-danger">RESET</button>
+                    <button type="button" class="button" class="btn btn-success">SUBMIT</button>
+                 </div> 
+          
               <h1>HOME</h1>
-            <div class="col-sm-3">
-              <p>Your Favorite Artist</p>
-              <p>When you are in your zone, no one hits it better than wizkid.</p>
+              <div class="row">
+            <div class="col-sm-5">
+              <p>Your Favorite Artist
+              When you are in your zone, no one hits it better than wizkid.</p>
               <button type="submit">Generate Playlist + </button>
             </div>
-            <div class="col-sm-3">
-            <img src="Images/Wizkid.png" alt="">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-5">
+            <img class="pics" src="Images/Wizkid.png" alt="">
             </div>
+          </div>
             <div class="row">
               <h2>TOP 10 SONGS</h2>
             <div class="col-sm-3">
-            <p>Your Top 10 Songs</p>
-            <p>Your top 10 addictions! Here's your dope list of most played songs.</p>
+            <p>Your Top 10 Songs
+            Your top 10 addictions! Here's your dope list of most played songs.</p>
             <div><p>Songs and Pictures</p>
               <img src="Images/Burna Boy.png" alt="">
               <img src="Images/Wizkid.png" alt="">
